# LearnCmake

t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t4/: CMakeLists.txt
t4/libs/lib/: libhhhello.1.2.dylib  libhhhello.1.dylib
t4/src/: CMakeLists.txt  main.c
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
